[package]
name = "day3-2"
version = "0.1.0"
authors = ["Mikael Zayenz Lagerkvist <zayenz@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
strum = "0.11.0"
strum_macros = "0.11.0"
rayon = "1"
itertools = "0.8.2"
aoc2019 = { path = "../aoc2019"}
intcode = { path = "../intcode"}


[dev-dependencies]
assert_cli = "0.5"
