[package]
name = "intcode"
version = "0.1.0"
authors = ["Mikael Zayenz Lagerkvist <zayenz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.3"
strum = "0.11.0"
strum_macros = "0.11.0"
rayon = "1"
aoc2019 = { path = "../aoc2019"}
joinery = "2.0.0"
itertools = "0.8.2"